# komms-cli

./: .gitignore  AGENTS.md  Cargo.toml  NOTICE  README.md  deny.toml
.cargo/: audit.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
crypto/: Cargo.toml
crypto/src/: aead.rs  kdf.rs  lib.rs  request_auth.rs  sealed.rs  state_hash.rs  tags.rs
protocol/: Cargo.toml
protocol/src/: canonical.rs  encode.rs  lib.rs  verify.rs
protocol/tests/: parity_fixtures.rs
src/: hexutil.rs  index_scan.rs  lib.rs  main.rs  output.rs  read_rpc.rs  submit.rs
