# ADR-016 §2 / WS-D.4 — promotes `protocol/` from a transitive path-dep
# to a first-class workspace member so `cargo test --workspace` runs the
# `parity_fixtures.rs` cross-language gate every PR. Without this the
# canonical-bytes invariant has no automated enforcement (`cargo test`
# from a single-package root does not reach tests/ in path-deps).
#
# `crypto/` was promoted from `komms-indexer/crypto/` to this workspace
# on May 18, 2026 — the same canonical-source-of-truth principle that
# applies to the wire codec (`protocol`) applies to the shared crypto
# primitives (HMAC, KDF, AEAD, sealed-sender, state-hash, match-tags).
# Consumers (`komms-indexer/{indexer,indexer-actors,indexer-db,komms-
# miner-submit}` + `komms-gateway`) reach this crate via the same
# sibling-checkout path-dep convention as `protocol`.
[workspace]
members = [".", "protocol", "crypto"]
resolver = "3"

[package]
name = "komms-cli"
version = "0.1.0"
edition = "2024"
description = "Standalone developer CLI for KOMMS payloads (decode, post, read, inspect)"
license = "Apache-2.0"
# The cli depends on the in-tree `protocol/` workspace member via
# a path-dep (ADR-016 §2). Publishing to crates.io would break the
# resolve (crates.io disallows path-deps); the cli is shipped as a
# downloadable binary, not a library, so opt out of `cargo publish`
# explicitly. Required for `cargo deny check bans` to honour the
# workspace's `allow-wildcard-paths = true` setting (the check
# would otherwise reject the path-dep as a wildcard regression).
publish = false

[[bin]]
name = "komms"
path = "src/main.rs"

[lib]
name = "komms_cli"
path = "src/lib.rs"

[features]
default = []
submit = []

[dependencies]
anyhow = "1.0.98"
ciborium = "0.2.2"
clap = { version = "4.5", features = ["derive", "env"] }
ed25519-dalek = { version = "2.1", features = ["alloc"] }
faster-hex = "0.10.0"
fjall = { version = "2.11.2", default-features = false, features = [
    "lz4",
    "miniz",
    "ssi_tx",
] }
kaspa-addresses = "1.1.0-rc.2"
kaspa-consensus-core = "1.1.0-rc.2"
kaspa-rpc-core = "1.1.0-rc.2"
kaspa-txscript = "1.1.0-rc.2"
kaspa-wrpc-client = "1.1.0-rc.2"
postcard = { version = "1.0.8", features = ["use-std"] }
protocol = { path = "protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
tokio = { version = "1.45", features = ["rt-multi-thread", "macros"] }
secp256k1 = { version = "0.29", features = ["global-context", "rand"] }

[patch.crates-io]
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.1.0-rc.2" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.1.0-rc.2" }
kaspa-math = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.1.0-rc.2" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.1.0-rc.2" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.1.0-rc.2" }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.1.0-rc.2" }

fjall = { git = "https://github.com/fjall-rs/fjall.git", branch = "improve-write-stalling" }
serde_nested_with = { git = "https://github.com/murar8/serde_nested_with.git", tag = "0.2.6" }
